@@ -10,8 +10,8 @@ Version 2.23
 * The following bugs are resolved with this release:
 
   16517, 16519, 16520, 16734, 17905, 18086, 18265, 18480, 18525, 18618,
-  18647, 18661, 18674, 18778, 18781, 18787, 18789, 18790, 18820, 18824.
-
+  18647, 18661, 18674, 18778, 18781, 18787, 18789, 18790, 18820, 18824,
+  18975.
 
 Version 2.22
 
